--- a/css/style.css
+++ b/css/style.css
@@ -25,13 +25,13 @@
 
 /* Estilo Desktop */
 body{
-    background-color: #0E1014;
-    color: #FFFFFF
+    background-color: #ffffff;
+    color: #0E1014;
 }
 
 header img{
     display: block;
-    margin: 75px 0 0 360px;
+    margin: 65px 0px 0px 365px;
 }
 
 h1{
